timer-overflow-fixed?

--- a/sass/layout/_section-about.scss
+++ b/sass/layout/_section-about.scss
@@ -9,6 +9,8 @@
   justify-content: center;
 
   overflow: visible;
+
+  overflow-x: hidden;
 }
 
 .containerAbout {
