--- a/sass/main.css
+++ b/sass/main.css
@@ -480,6 +480,7 @@ img {
   align-items: center;
   justify-content: center;
   overflow: visible;
+  overflow-x: hidden;
 }
 
 .containerAbout {
